# berth

./: .env.example  .gitignore  .yamllint  ARCHITECTURE.md  Cargo.toml  INSTALL.md  LICENSE  README.md  ROADMAP.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: CLI_TREE.md
examples/: config.default.yaml  config.yaml
scripts/record-demo/: demo.sh  record.sh
src/: build_info.rs  cli.rs  discovery.rs  lib.rs  lifecycle_state.rs  main.rs  terminal.rs
src/commands/: agent.rs  attach.rs  daemon.rs  delete.rs  deploy.rs  doctor.rs  enter.rs  hosts.rs  init_shell.rs  list.rs  logs.rs  mod.rs  new.rs  org.rs  project.rs  reap.rs  run.rs  shell.rs  stop.rs  tunnel.rs
src/config/: mod.rs
src/deploy/: fetch.rs  freshness.rs  local.rs  mod.rs  probe.rs  push.rs
src/hosts/: mod.rs
src/lifecycle/: mod.rs
src/runtime/: bare.rs  kubernetes.rs  mod.rs  podman.rs
src/session/: client.rs  mod.rs  protocol.rs  supervisor.rs
src/ssh/: mod.rs  osc7_filter.rs  pty_proxy.rs
src/tunnel/: mod.rs
tests/: e2e.rs
