[package]
name = "berth"
version = "0.1.0"
edition = "2021"
description = "Consistent development workspaces, local or remote, bare metal"
license = "MIT"
authors = ["Morgaesis"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
which = "6"
shell-words = "1"

[dev-dependencies]
tempfile = "3"
