[package]
name = "berth"
version = "0.1.8"
edition = "2021"
description = "Consistent development workspaces, local or remote, bare metal"
license = "MIT"
authors = ["Morgaesis"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
which = "6"
shell-words = "1"
portable-pty = "0.9.0"
nix = { version = "0.31.2", features = ["term", "fs", "process", "signal", "socket"] }
libc = "0.2.186"
clap_complete = "4.6.5"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "stream"] }
sha2 = "0.11.0"
semver = "1.0.28"
hex = "0.4.3"
futures-util = "0.3.32"
indicatif = "0.18.4"
tracing-appender = "0.2.5"
colored = "3.1.1"
